serialize branch settings