@@ -6,9 +6,11 @@ import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.components.PersistentStateComponent;
 import com.intellij.openapi.components.State;
 import com.intellij.openapi.components.Storage;
+import com.intellij.util.xmlb.XmlSerializerUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Arrays;
 import java.util.List;
 
 @State(
@@ -17,7 +19,7 @@ import java.util.List;
 )
 public class BranchSettings implements PersistentStateComponent<BranchSettingsState> {
 
-    private BranchSettingsState myState = BranchSettingsState.getDefault(List.of("feature", "bugfix", "hotfix"));
+    private BranchSettingsState myState = BranchSettingsState.getDefault(Arrays.asList("feature", "bugfix", "hotfix"));
 
     public static BranchSettings getInstance() {
         return ApplicationManager.getApplication().getService(BranchSettings.class);
@@ -30,6 +32,6 @@ public class BranchSettings implements PersistentStateComponent<BranchSettingsSt
 
     @Override
     public void loadState(@NotNull BranchSettingsState state) {
-        myState = state;
+        XmlSerializerUtil.copyBean(state, myState);
     }
 }
